# computer_graphics_advanced

./: README.md
lab1/: CMakeLists.txt  README.md
lab1/src/: PlaneMoveCallback.h  basic_pipeline.cpp
